# telegramBot

./: .gitignore  pyproject.toml
core/: settings.py  urls.py
core/fixtures/: dump.json
telegramBot/: urls.py
telegramBot/migrations/: 0001_initial.py
telegramBot/models/: category.py  user.py
telegramBot/templates/: base.html  webApp.html
telegramBot/views/: __init__.py  home.py  telegramWebHook.py  web_app.py
